# augura

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/augura/: __init__.py  analyze.py  bed_fit.py  brim.py  cadquery_adapter.py  cli.py  estampo.py  footprint.py  manifold.py  mesh.py  min_feature.py  orientation.py  overhangs.py  report.py  tip_over.py  wall_thickness.py
test_env/: pyvenv.cfg
tests/: test_bed_fit_e2e.py  test_brim_e2e.py  test_cadquery_e2e.py  test_cli_e2e.py  test_cli_fixtures_integration.py  test_estampo.py  test_estampo_e2e.py  test_fixtures_build.py  test_manifold_e2e.py  test_mesh_e2e.py  test_min_feature_e2e.py  test_orientation_e2e.py  test_overhangs_e2e.py  test_real_world_step.py  test_tip_over_e2e.py  test_tolerances.py  test_wall_thickness_e2e.py
tests/data/real_world/: ATTRIBUTION.md
tests/fixtures/: __init__.py
